--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-color: var(--body-color);
 }
 
-* {transition: 0.3s ease-in-out; font-family: 'Inconsolata', monospace;}
+* {transition: 0.1s ease-in-out; font-family: 'Inconsolata', monospace;}
 button:focus {outline: none;}
 input:focus {outline: none;}
 textarea:focus {outline: none;}
@@ -30,18 +30,76 @@ ul, li {padding: 0;margin: 0;list-style: none;}
 	font-size: 18pt;
 }
 
+/* HEADER STYLES */
 #main-header-block {
-  width: 100%;
-	height: 50px;
+  width: 70%;
 	background-color: white;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
+	margin-top: 40px;
+
+  margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	/*border: 2px solid black;*/
 }
 
-#main-header-block img {
+#main-header-block > img {
   width: 180px;
   height: 180px;
-  border-radius: 8px;
+  border: 4px solid transparent;
+  border-radius: 100%;
+}
+#main-header-block > img:hover {
+  border: 4px solid #BD0F2C;
+}
+
+#main-header-block > h1 {
+  font-family: 'Inconsolata Light', monospace;
+  font-size: 20pt;
+}
+
+#main-header-block > p {
+  font-family: 'Inconsolata Regular', monospace;
+  font-size: 18pt;
+}
+
+#main-header-menu-block {
+  padding-top: 50px;
+  padding-bottom: 30px;
+  font-family: 'Inconsolata ExtraLight', monospace;
+  font-size: 18pt;
+  letter-spacing: 0.5px;
+}
+
+#main-header-menu-block > li > span {user-select: none;}
+#main-header-menu-block > li > a {
+  background-color: white;
+  color: black;
+  text-decoration: underline;
+}
+#main-header-menu-block > li > a:hover {
+  background-color: black;
+  color: white;
+}
+/* HEADER STYLES */
+
+
+#content-blocks {
+  width: 70%;
+	background-color: white;
+	margin-top: 40px;
+
+  margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+  margin-bottom: 40px;
+}
+
+#content-blocks > div {
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+#content-blocks > div > h1 {
+  font-family: 'Inconsolata Regular', monospace;
+  font-size: 22pt;
 }
 
