--- a/style.css
+++ b/style.css
@@ -77,8 +77,7 @@ ul, li {padding: 0;margin: 0;list-style: none;}
   background-color: white;
   color: black;
   text-decoration: none;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding: 2px;
   border-bottom: 2px solid black;
 }
 #main-header-menu-block > li > a:hover {
@@ -118,10 +117,9 @@ ul, li {padding: 0;margin: 0;list-style: none;}
   margin-right: 5px;
   font-size: 16pt;
   letter-spacing: 0.5px;
-  
+
   text-decoration: none;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding: 2px;
   border-bottom: 2px solid black;
 }
 #social-networks-block > div > a:hover {
