--- a/style.css
+++ b/style.css
@@ -42,22 +42,27 @@ ul, li {padding: 0;margin: 0;list-style: none;}
 	/*border: 2px solid black;*/
 }
 
-#main-header-block > img {
-  width: 180px;
-  height: 180px;
-  border: 4px solid transparent;
-  border-radius: 100%;
-}
-#main-header-block > img:hover {
-  border: 4px solid #BD0F2C;
+#main-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start3;
 }
 
-#main-header-block > h1 {
+#main-header > div {padding-left: 15px;}
+
+#main-header > img {
+  width: 100px;
+  height: 100px;
+  border: 4px solid transparent;
+  border-radius: 20%;
+}
+
+#main-header > div > h1 {
   font-family: 'Inconsolata Light', monospace;
   font-size: 20pt;
 }
 
-#main-header-block > p {
+#main-header > div > p {
   font-family: 'Inconsolata Regular', monospace;
   font-size: 18pt;
 }
@@ -107,8 +112,18 @@ ul, li {padding: 0;margin: 0;list-style: none;}
   font-size: 20pt;
 }
 
-
 #intro-block > div {font-size: 16pt;}
+#intro-block > div > a {
+  background-color: white;
+  color: black;
+  text-decoration: none;
+  padding: 2px;
+  border-bottom: 2px solid black;
+}
+#intro-block > div > a:hover {
+  background-color: black;
+  color: white;
+}
 
 /* SOCIAL NETWORKS STYLES */
 #social-networks-block > div > a {
