--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ ul, li {padding: 0;margin: 0;list-style: none;}
 #main-header {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start3;
+  justify-content: flex-start;
 }
 
 #main-header > div {padding-left: 15px;}
