--- a/src/adaptive.css
+++ b/src/adaptive.css
@@ -31,3 +31,16 @@
 	#content-blocks > div > h1 {font-size: 17pt;}
 	#intro-block > div {font-size: 15pt;}
 }
+
+@media screen and (max-width: 450px) {
+	#main-header {
+  	display: flex;
+  	flex-direction: column;
+  	justify-content: flex-start;
+	}
+	#main-header-block {
+
+		margin-top: 10px;
+
+	}
+}
