update hover style

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import 'src/fonts/font.css';
 
 :root {
+  --maroon: #BD0F2C;
 }
 
 body {
@@ -86,7 +87,7 @@ ul, li {padding: 0;margin: 0;list-style: none;}
   border-bottom: 2px solid black;
 }
 #main-header-menu-block > li > a:hover {
-  background-color: black;
+  background-color: var(--maroon);
   color: white;
 }
 /* HEADER STYLES */
@@ -121,7 +122,7 @@ ul, li {padding: 0;margin: 0;list-style: none;}
   border-bottom: 2px solid black;
 }
 #intro-block > div > a:hover {
-  background-color: black;
+  background-color: var(--maroon);
   color: white;
 }
 
@@ -138,7 +139,7 @@ ul, li {padding: 0;margin: 0;list-style: none;}
   border-bottom: 2px solid black;
 }
 #social-networks-block > div > a:hover {
-  background-color: black;
+  background-color: var(--maroon);
   color: white;
 }
 /* SOCIAL NETWORKS STYLES */
