--- a/style.css
+++ b/style.css
@@ -148,3 +148,16 @@ ul, li {padding: 0;margin: 0;list-style: none;}
   color: white;
 }
 /* SOCIAL NETWORKS STYLES */
+
+
+/* DONATE ME STYLES */
+#donate-block > div { font-size: 15pt; }
+#donate-block > ul { font-size: 16pt; }
+#donate-block > ul > li {
+  border-left: 2px solid transparent;
+  display: inline-block;
+  margin-bottom: 4px;
+  padding-left: 2px;
+}
+#donate-block > ul > li:hover { border-left: 2px solid black; }
+/* DONATE ME STYLES */
